--- a/scripts/cityimages.html
+++ b/scripts/cityimages.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         city-images
     </title>
@@ -7,7 +11,7 @@
 <body>
     <header>
         <h1>
-            City Images
+            New York City
         </h1>
     </header>
     <nav>
@@ -22,15 +26,20 @@
             <li>
                 <a href="cityimages.html">
 <button>
-    City Images
+    New York City
 </button>
                 </a>
             </li>
         </ul>
     </nav>
-
+    <section>
+<h2>New York City Pictures</h2>
+<div class="photo-gallery">
     <img src="https://cdn.thinglink.me/api/image/984447822667448323/1024/10/scaletowidth/0/0/1/1/false/true?wait=true"?>
     <img src="https://th.bing.com/th/id/R.98fd68e2ef4e75eee17e462b2f69bdf4?rik=bymU3RHYmQbRNg&pid=ImgRaw&r=0">
     <img src="https://th.bing.com/th/id/R.21ab820f7bc230fb57a12ea2b55a0ebd?rik=MPDUD0mgjRTJ7g&riu=http%3a%2f%2fwww.michaelbrochstein.com%2fmisc%2fimages+-+NYCskyline%2fNYCskyline_150729C_183x2.jpg&ehk=v%2f69tHzGfXOIFaU4NPMCEEsLE2YWZSfQA17gi2%2bAiLk%3d&risl=&pid=ImgRaw&r=0">
     <img src="https://images.pexels.com/photos/771881/pexels-photo-771881.jpeg?cs=srgb&dl=architecture-buildings-city-771881.jpg&fm=jpg">
+</div>
+</section>
 </body>
+</html>
