--- a/scripts/index.html
+++ b/scripts/index.html
@@ -1,31 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>
-        simple-travel-site
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+     <title>
+        New York City
+    </title>
 </head>
 <body>
     <header>
         <h1>
-            Simple Travel Site
+            New York City
         </h1>
     </header>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">
-                    <button>
-                        Home
-                    </button>
-                </a>
-            </li>
-            <li>
-                <a href="cityimages.html">
+    <ul>
+        <li>
+            <a href="index.html">
+                <button>
+                    Home
+                </button>
+            </a>
+        </li>
+        <li>
+            <a href="cityimages.html">
 <button>
-    City Images
+City Images
 </button>
-                </a>
-            </li>
-        </ul>
-    </nav>
+            </a>
+        </li>
+    </ul>
+</nav>
+    <nav>
+        <section>
+            <p>
+                New York City, also known as the Big Apple, is one of the most vibrant and diverse cities in the world. The city is famous for its iconic skyline, bustling street life, and impressive cultural offerings. Known for its iconic landmarks such as the Statue of Liberty and the Empire State Building, New York City is a hub of creativity and artistry. From the bright lights of Times Square to the sprawling green parks, New York is a city that never fails to amaze its residents and visitors alike.
+            </p>
+            <p>
+                As the city that never sleeps, New York City is known for its bustling energy that pulsates around the clock. With a population of over 8 million, New York is always on the go, no matter what time of day it is. From the early morning rush hour to the thriving nightlife, there is always something to see and do in the city. Whether you're in search of a quiet coffee shop or a vibrant dance club, New York City never disappoints. As such, it's no surprise that New York is a top destination for visitors from all over the world who are looking for an unforgettable travel experience.
+
+
+
+
+
+
+            </p>
+        </section>
+       <section>
+        <h2>Leaders</h2>
+        <div>
+            <table class="table-center">
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+                <tr>
+                    <td>Aron Afzali</td>
+                    <td>aronafzali@gmail.com</td>
+                    <td>516-413-1185</td>
+                </tr>
+                <tr>
+                    <td>Aron Afzali</td>
+                    <td>aronafzali@gmail.com</td>
+                    <td>516-413-1185</td>
+                </tr>
+                <tr>
+                    <td>Aron Afzali</td>
+                    <td>aronafzali@gmail.com</td>
+                    <td>516-413-1185</td>
+                </tr>
+            </table>
+        </div>
+       </section>
 </body>
+</html>
